// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<div
  className="Divider"
/>
`;

exports[`Divider should render in a vertical position 1`] = `
<div
  className="vertical"
/>
`;
